[FEAT] keywords, description and favicon

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml"
+        href="./public/images/Logo-tsy-png.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,7 +12,12 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
-    <title>Tu Servicio Ya!</title>
+    <title>Tu Servicio Ya! - Plomería y Reparaciones Profesionales en Argentina
+    </title>
+    <meta name="description"
+        content="En Tu Servicio Ya! ofrecemos servicios de plomería, reparación de bombas Rowa, calefones y termotanques. Atención personalizada y soluciones efectivas para tu hogar y negocio en CABA y Provincia de Buenos Aires." />
+    <meta name="keywords"
+        content="plomería, reparación de bombas Rowa, calefones, termotanques, servicio de plomería, instalación de calefones, mantenimiento de calefones, reparación de termotanques, servicios de plomería en Argentina, soluciones de plomería, CABA, Ciudad de Buenos Aires, barrios, provincia de Buenos Aires, plomería en CABA, plomería en GBA, plomería en Capital Federal, servicios de emergencia de plomería, instalación de sistemas de agua, reparación de fugas, mantenimiento preventivo de plomería, instalación de grifería, plomeros profesionales, instalación de sanitarios, reparación de inodoros, instalación de calefacción, reparación de calefacción, plomería residencial, plomería comercial, servicios de plomería 24/7, 24 horas" />
 </head>
 <body>
     <div id="root"></div>
