Google Tag Manager

--- a/index.html
+++ b/index.html
@@ -20,8 +20,33 @@
         content="plomería, reparación de bombas Rowa, calefones, termotanques, servicio de plomería, instalación de calefones, mantenimiento de calefones, reparación de termotanques, servicios de plomería en Argentina, soluciones de plomería, CABA, Ciudad de Buenos Aires, barrios, provincia de Buenos Aires, plomería en CABA, plomería en GBA, plomería en Capital Federal, servicios de emergencia de plomería, instalación de sistemas de agua, reparación de fugas, mantenimiento preventivo de plomería, instalación de grifería, plomeros profesionales, instalación de sanitarios, reparación de inodoros, instalación de calefacción, reparación de calefacción, plomería residencial, plomería comercial, servicios de plomería 24/7, 24 horas, tu service ya, tuserviceya, Palermo, Recoleta, Belgrano, Caballito, San Telmo, La Boca, Villa Urquiza, Nuñez, Flores, Avellaneda, San Nicolás, Retiro, Almagro, Balvanera, Chacarita, Colegiales, Barracas, Paternal, Villa Devoto, Villa del Parque, San Isidro, Vicente López, Tigre, San Fernando, Escobar, Pilar, San Martín, José C. Paz, Malvinas Argentinas, San Miguel, Avellaneda, Lanús, Quilmes, Berazategui, Lomas de Zamora, Esteban Echeverría, Ezeiza, Florencio Varela, Almirante Brown, San Vicente, Morón, Ituzaingó, Castelar, Hurlingham, El Palomar, San Antonio de Padua, Merlo, José C. Paz, Ramos Mejía, La Matanza, zona sur, zona norte, barrios privados, zona oeste" />
     <meta name="google-site-verification"
         content="wpJJWKaIlERWjvfOd-3c5tU3a0-4VPpjr8s6NDFQkPY" />
+    <!-- Google Tag Manager -->
+    <script>
+        (function(w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-T7VRN2X6');
+    </script>
+    <!-- End Google Tag Manager -->
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T7VRN2X6"
+            height="0" width="0"
+            style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 </body>
